<resources>
    <string name="app_name">LectureMate</string>
    <string name="titleText">LectureMate</string>
    <string name="recordText">Record</string>
    <string name="importText">Import</string>
    <string name="openText">Open</string>
    <string name="creating_transcript_for">Creating Transcript</string>
    <string name="percentLoaded">10%</string>
    <string name="lecture_name_label">Lecture Name:</string>
    <string name="audio_button">Audio</string>
    <string name="video_button">Video</string>
    <string name="start_recording_button">Start Recording</string>
    <string name="share_lecture_button">Share Lecture</string>
    <string name="edit_transcript_button">Edit Transcript</string>
    <string name="edit_key_points_button">Edit Key Points</string>
    <string name="edit_label">Edit</string>
    <string name="temp_card_title">Bioassy Lab</string>
    <string name="temp_card_info">20:35 | 02/15/2005</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="EnterDescText">Enter Description Here</string>
    <string name="name">Name:</string>
    <string name="description">Description</string>
    <string name="time">Time:</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="_0">0</string>
    <string name="save2">Save</string>
    <string name="date">Date:</string>
    <string name="name2">Name</string>
    <string name="textview">TextView</string>
    <string name="uri">URI</string>
    <string name="importVid">Import</string>
</resources>